<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lenovo Social</string>
    <string name="action_settings">Settings</string>
    <string name="action_donate">Donate</string>
    <string name="expiration_date">Expiration date:</string>
    <string name="expired">Expired</string>
    <string name="restrictions">Restrictions:</string>
    <string name="giveaways">Giveaways</string>
    <string name="social_events">Social events</string>
    <string name="giveaway">Giveaway</string>
    <string name="releases">Releases</string>
    <string name="release_date">Release date:</string>
    <string name="released">Released</string>
    <string name="title_activity_photos">Photos</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_news_releases">News Releases</string>
    <string name="title_activity_quick_news">QuickNewsActivity</string>

</resources>
