<?xml version="1.0" encoding="UTF-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lenovo_darkred"
    android:padding="@dimen/padding_full"
    tools:context=".MainActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_half"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/imageButtonSocialEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/social_events"
                    android:src="@drawable/calendar" />

                <TextView
                    android:id="@+id/textViewSocialEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/social_events"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_half"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/imageButtonGiveaways"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/giveaways"
                    android:src="@drawable/giveaway_logo" />

                <TextView
                    android:id="@+id/textViewGiveaways"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/giveaways"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_half"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/imageButtonReleases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/releases"
                android:src="@drawable/release" />

            <TextView
                android:id="@+id/textViewReleases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/releases"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </TableRow>

</TableLayout>